mule-fundamentals/v/3.8/mule-components.adoc
= Mule Components
:keywords: studio, server, components, connectors, elements, palette

image:component.png[component]

Components are message processors which execute link:http://en.wikipedia.org/wiki/Business_logic[business logic] on messages. They enable you to perform specific actions without writing any Mule-specific code. You can drop a component – a POJO, Spring bean, Java bean, or script – into a flow to perform almost any customized task within your Mule application. For example, you can use a component to verify that items on an invoice are in stock in a warehouse, or to update a database with a customer's order history. 

== Scripting Components

Mule includes several *scripting components* that you can use in flows to execute custom business logic. These components enable you to drop a chunk of custom-written logic into your flow to act upon messages.  

image:scripting_components.png[scripting_components]

The example below illustrates the use of a Groovy script component. The script uses the value of `state` to determine which of four sales regions to assign a lead.

== Web Service Components

Also included are two components to facilitate *exposing, consuming, and proxying Web services.* The CXF component leverages the CXF framework Mule uses to support SOAP Web services; the REST component works with Jersey to support RESTful Web services; both are bound to HTTP.

image:rest-cxf.png[rest-cxf]

[TIP]
*APIkit* offers a new and improved way of building a REST API. Access the link:/anypoint-platform-for-apis/apikit[APIkit Documentation] to learn how to build REST APIs in a few hours or days.

== HTTP Component

Further, Mule provides an HTTP component to facilitate working with calls over HTTP. Use the *HTTP Static Resource Handler* to easily serve up static content when called. +

image:http_components.png[http_components]


== Other Components

Finally, Mule includes several other components designed to meet rather specific needs.  +

image:misc_components.png[misc_components]

* Use a *Logger component* to log activities in the flow as they occur. 
* Use an *Expression component* to evaluate a particular expression upon a message in a flow.
* Use an *Invoke* component to invoke the method of an object specified with a Mule expression.
* Use an *Echo component* to return the payload of a message as a call response.
* Use a *Flow Ref component* to access another flow from within a flow.
* Use a *Batch Execute* component to kick off processing of a batch job.

== Groovy Script Component Example

[source, xml, linenums]
----
include::_sources/mule-components_1.xml[]
----

== REST Component Example

[source, xml, linenums]
----
include::_sources/mule-components_2.xml[]
----

=== REST Example Resource

example.RestExampleResource

[source, java, linenums]
----
include::_sources/mule-components_3.java[]
----

== Echo, Logger, and HTTP Components Examples

[tabs]
------
[tab,title="HTTP Listen and Choose"]
....
image:36MuleCompExFlow.png[36MuleCompExFlow]

In the following example, you can try different values from this URL:

http://localhost:8081/?choice=<value>

If you enter *choice=mules*, the flow succeeds and returns a status of 200 (okay); otherwise any other value returns a choice of null and a status code of 400 (bad request).

[source, xml, linenums]
----
include::_sources/mule-components_4.xml[]
----
....
[tab,title="HTTP Static Resource Handler"]
....
image:36HTTPStatResHdlr.png[36HTTPStatResHdlr]

[source, xml, linenums]
----
include::_sources/mule-components_5.xml[]
----
....
------

== See Also

* *NEXT STEP*: Read on about link:/mule-fundamentals/v/3.8/mule-transformers[transformers].
* Skip ahead to understand the structure of a link:/mule-fundamentals/v/3.8/mule-message-structure[Mule message].
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
